css/navbar.css
.navbar {
    position: relative;
    display: grid;
    width: 100%;
    margin-right: auto;
    margin-left: auto;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 100% minmax(0, auto);
    grid-template-areas:
        "brand toggler"
        "list list";
    background-color: #fff;
}

.navbar__brand {
    grid-area: brand;
    align-self: center;
    padding-left: 1rem;
    text-decoration: none;
    color: var(--theme-color-dark-gray, rgb(63, 63, 63)) !important;
}

.navbar__icon {
    margin-left: auto;
}

.navbar__icon--dark:link,
.navbar__icon--dark:visited {
    color: var(--theme-color-dark-gray, rgb(46, 46, 46));
}

.navbar__icon--dark:hover,
.navbar__icon--dark:active {
    color: var(--theme-color-dark-alpha-5, rgba(58, 58, 58, 0.774));
}

.navbar__item {
    padding: 1.5rem;
    border-bottom: 1px solid rgb(187, 187, 187);
    background-color: #fff;
}

.navbar__link:link,
.navbar__link:visited {
    text-decoration: none;
    color: var(--theme-color-dark-gray, rgb(46, 46, 46));
}

.navbar__link:hover,
.navbar__link:active {
    text-decoration: underline;
    color: var(--theme-color-dark-alpha-5, rgb(46, 46, 46));
}

.navbar__list {
    grid-area: list;
    margin: 0;
    padding: 0;
    list-style: none;
}

.navbar__list--hide {
    display: none;
}

.navbar__toggler {
    grid-area: toggler;
    margin-left: auto;
    padding: 0 1rem 0 0;
    border: 0;
    background-color: transparent;
}

@media (min-width: 768px) {
    .navbar {
        max-width: 1200px;
        grid-template-columns: minmax(200px, auto) 1fr;
        grid-template-rows: minmax(100%, auto);
        grid-template-areas:
            "brand list";
    }

    .navbar__toggler {
        display: none;
    }

    .navbar__link {
        font-size: 1rem;
    }

    .navbar__link--active {
        font-weight: 700;
    }

    .navbar__list {
        display: flex;
        align-self: center;
        justify-self: end;
        margin: 0;
    }

    .navbar__item {
        padding: 0 1rem;
        border: 0;
    }
}

